<?xml version="1.0" encoding="utf-8"?>
<menu 
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_reset"
        android:title="@string/button_reset"
        android:icon="?attr/ic_action_backspace"
        yourapp:showAsAction="always|withText"
        />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings_title"
        android:icon="?attr/ic_action_settings"
        yourapp:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_facebook"
        android:title="@string/menu_facebook"
        android:icon="?attr/ic_action_facebook"
        yourapp:showAsAction="ifRoom"
    	/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="?attr/ic_action_about"
        yourapp:showAsAction="ifRoom"
    	/>
</menu>